fix: user response fix
