# api/user.go
@@ -3,11 +3,30 @@ package api
 import (
 	"context"
 	"net/http"
+	"time"
 
 	"github.com/labstack/echo/v4"
 	db "github.com/tetrex/backend-masterclass-go/db/sqlc"
 	"github.com/tetrex/backend-masterclass-go/util"
 )
+
+type userResponse struct {
+	Username          string    `json:"username"`
+	FullName          string    `json:"full_name"`
+	Email             string    `json:"email"`
+	PasswordChangedAt time.Time `json:"password_changed_at"`
+	CreatedAt         time.Time `json:"created_at"`
+}
+
+func newUserResponse(user db.User) userResponse {
+	return userResponse{
+		Username:          user.Username,
+		FullName:          user.FullName,
+		Email:             user.Email,
+		PasswordChangedAt: user.PasswordChangedAt,
+		CreatedAt:         user.CreatedAt,
+	}
+}
 
 type CreateUserRequest struct {
 	Username string `json:"username" binding:"required,alphanum"`
@@ -24,7 +43,7 @@ type CreateUserRequest struct {
 //	@accept			json
 //	@produce		json
 //	@param			body body CreateUserRequest true "CreateUserRequest"
-//	@success		200	{object}	util.OkResponse
+//	@success		200	{object}	util.OkResponse{data=userResponse}
 //	@failure		500	{object}	util.ErrorResponse
 //	@router			/v1/user/ [post]
 func (s *Server) createUser(c echo.Context) error {
@@ -53,5 +72,5 @@ func (s *Server) createUser(c echo.Context) error {
 	if err != nil {
 		return c.JSON(http.StatusBadRequest, util.ErrorResponse{Error: err.Error()})
 	}
-	return c.JSON(http.StatusOK, util.OkResponse{Message: "user profile created successfully", Data: user})
+	return c.JSON(http.StatusOK, util.OkResponse{Message: "user profile created successfully", Data: newUserResponse(user)})
 }
